tests/compile_fail/static_str_coerced_to_bare_ref.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/static_str_coerced_to_bare_ref.rs:10:14
   |
10 |     let _f = injectorpp::func!(fn (foo)(&str) -> &str);
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected mutable reference `&mut for<'a> fn(&'a str) -> &str`
              found mutable reference `&mut for<'a> fn(&'a str) -> &'a str`
   = note: this error originates in the macro `$crate::__func_checked` which comes from the expansion of the macro `injectorpp::func` (in Nightly builds, run with -Z macro-backtrace for more info)
